# geometry

./: .gitignore  README.md
bilateral_normal_filtering/: CMakeLists.txt  bilateral_normal_filter.cpp  bilateral_normal_filter.h  mesh.h  res_analysis.cpp  res_analysis.h  run.sh  vtk.h
bilateral_normal_filtering/test/: CMakeLists.txt  test_bilateral_normal_filter.cpp  test_mesh.cpp
data/: cylinder.ply  sphere.stl
doc/bilateral_normal_filter/: bilateral_normal_filter.tex
doc/bilateral_normal_filter/report_6_15/: report_0.tex
doc/bilateral_normal_filter/report_6_21/: report_0.tex
doc/isotopic_approximation/: about_normal_condition.tex  basic_data_structure.dot  basic_data_structure.dot.dot  delaunay_triangulation  implementation.txt  report_0.tex  res  res_compare
doc/isotopic_approximation/implement/: report_0.tex
doc/isotopic_approximation/slides/: iso_sim.tex
doc/isotopic_approximation/slides/11.17/: iso_sim.tex
doc/vector_field_deform/: rotate.wxm  vector_field_based_shape_deformation.aux  vector_field_based_shape_deformation.tex
isotopic_approximation/: CMakeLists.txt  basic_data_structure.cpp  basic_data_structure.h  basic_op.cpp  basic_op.h  cgal_common.h  config.h  constraint.cpp  constraint.h  debug.h  filter.h  optimizer.cpp  optimizer.h  sampling.cpp  sampling.h  surface_generator.cpp  surface_generator.h  triangulation.cpp  triangulation.h  triangulation2.cpp  triangulation2.h  triangulation_fix.cpp  triangulation_fix.h
isotopic_approximation/app/: CMakeLists.txt  main.cpp  noise_maker.cpp
isotopic_approximation/scrpit/: Makefile  Makefile2  Makefile_app  basic.in  noised.in  pc_setting.in
isotopic_approximation/test/: 3d_triangulation.cpp  CMakeLists.txt  debug_simp_jpts.cpp  mutual_tessellation.cpp  test_KernelRegionJudge.cpp  test_collapseEdge.cpp  test_collapse_bc.cpp  test_linkcondition.cpp  test_mutual_tessellation.cpp  test_optimizer.cpp  test_point2tri_sqdis.cpp  test_sampling.cpp  test_sampling2.cpp  test_save_load_status.cpp  test_simptolerance.cpp  test_surf_genator.cpp  test_tetmesh.cpp  test_tetquality.cpp  test_triangle.cpp  test_triangulation.cpp
isotopic_approximation2/: CMakeLists.txt  basic_data_structure.cpp  basic_data_structure.h  basic_op.h  bound_sphere.cpp  bound_sphere.h  constraint.cpp  constraint.h  deformer.cpp  deformer.h  isotopic_approximation.cpp  isotopic_approximation.h  isotopic_debug.cpp  isotopic_debug.h  isotopic_io.cpp  isotopic_mutuall_tessellation.cpp  isotopic_refine.cpp  isotopic_simpbz.cpp  isotopic_simpzero.cpp  isotopic_simtol.cpp  isotopic_smoother.cpp  kdtree_warp.cpp  kdtree_warp.h  mls.cpp  mls.h  sampling.cpp  sampling.h  shell.cpp  shell.h  smoother.cpp  smoother.h  surface_generator.cpp  surface_generator.h
isotopic_approximation2/app/: CMakeLists.txt  calcBBox.cpp  main.cpp
isotopic_approximation2/script/: Makefile  backward_result.csv  banana_dat.in  cigar_dat.in  creature_dat.in  cylinder_dat.in  data.in  ellipsoid_dat.in  fertility_dat.in  forward_result.csv  pc_setting.in  rabbit_dat.in  suite.in  suite_l.in
isotopic_approximation2/test/: CMakeLists.txt  debug_normal_condition.cpp  test_collapse_edge.cpp  test_deform.cpp  test_deform_basic.cpp  test_mls.cpp  test_mls_basic.cpp  test_smooth.cpp  test_triangulation.cpp
isotopic_approximation2/test_zjc/: CMakeLists.txt  basic_data_structure.cpp  basic_data_structure.h  main.cpp
mesh_filter/: CMakeLists.txt  run.sh
mesh_filter/app/: CMakeLists.txt  flip_edge.cpp  main.cpp
mesh_filter/bnf/: CMakeLists.txt  bilateral_normal_filter.cpp  bilateral_normal_filter.h  command_line_praser.h  config.h  const_val.h  data_type.h  mesh_type.h  util.h  zsw_clock.h
mesh_filter/lf/: CMakeLists.txt  lowpass_filter.cpp  lowpass_filter.h
mesh_filter/lhf/: CMakeLists.txt  lh_filter.cpp  lh_filter.h
mesh_filter/res_analysis/: res_analysis.cpp  res_analysis.h
mesh_filter/test/: CMakeLists.txt  analysis.cpp  sort_mesh_vertex.cpp  test_analysis.cpp  test_bilateral_normal_filter.cpp  test_boost_arguement.cpp  test_flann.cpp  test_processNVRing.cpp  test_rRingFacesByEdge.cpp
vector_field_deform/: CMakeLists.txt  implicit_tools.cpp  implicit_tools.h  integrate.cpp  integrate.h  quad_scalar_field.mac  scalar_field.cpp  scalar_field.h  vector_field.cpp  vector_field.h
vector_field_deform/test/: CMakeLists.txt  jac_hes_err.h  test_blend_func.cpp  test_implicit_tool.cpp  test_isosurface_region_func.cpp  test_linear_scalar_field.cpp  test_quad_scalar_field.cpp  test_quad_scalar_field2.cpp  test_region_func.cpp  test_vector_field.cpp  test_vector_field.wxm
zswlib/: CMakeLists.txt  config.h  const_val.h  data_type.h  error_ctrl.h  matrix_type.h  zsw_clock.h  zsw_clock_c11.cpp  zsw_clock_c11.h  zsw_stl_ext.h
zswlib/config_parser/: config_parser.h  example.conf  test_cfg_parser.cpp
zswlib/converter/: CMakeLists.txt  matrix_conv.h  test.cpp
zswlib/io/: CMakeLists.txt  VTKWriter.h  zsw_io.cpp.dep  zsw_io.h.dep
zswlib/io/example/: CMakeLists.txt  main.cpp
zswlib/log/: CMakeLists.txt  test.cpp  zsw_log.cpp  zsw_log.h
zswlib/mesh/: EdgeFlipMean.cpp  EdgeFlipMean.h  mesh_op.cpp  mesh_op.h  mesh_type.h  util.h  zsw_flann.h  zsw_flann2.h
zswlib/mesh/test/: CMakeLists.txt  test_edge_flip.cpp  test_flann.cpp  test_rRingVertex.cpp
zswlib/test/: CMakeLists.txt  test_nth_vector.cpp
