add_executable(test_linear_scalar_field test_linear_scalar_field.cpp)
target_link_libraries(test_linear_scalar_field vector_fields)

add_executable(test_blend_func test_blend_func.cpp)
target_link_libraries(test_blend_func vector_fields)

add_executable(test_region_func test_region_func.cpp)
target_link_libraries(test_region_func vector_fields)

add_executable(test_vector_field test_vector_field.cpp)
target_link_libraries(test_vector_field vector_fields)

add_executable(test_implicit_tool test_implicit_tool.cpp)
target_link_libraries(test_implicit_tool vector_fields)

add_executable(test_quad_scalar_field test_quad_scalar_field.cpp)
target_link_libraries(test_quad_scalar_field vector_fields)

add_executable(test_isosurface_region_func test_isosurface_region_func.cpp)
target_link_libraries(test_isosurface_region_func vector_fields)

add_executable(test_quad_scalar_field2 test_quad_scalar_field2.cpp)
target_link_libraries(test_quad_scalar_field2 vector_fields)
